29.oct (ws)
      - fix #13405: Page must be clicked to hear sound change in Mixer
      - fix #12572: Clicking page during playback shortens sound of notes
      - fix #3573: Volta brackets do not anchor to nearest bar line
      - implement #3704: Small note heads in chords
      - fix #3798: Grace note stem direction in multi-voice context
      - fix #13390: Sound doesn't change after changing it in mixer
      - fix #13391: Sound continues after mute or solo
      - fix #13400: If a slur is moved, new position is not saved
      - fix #13034: Tie direction for chords
28.oct (ws)
      - more robust reading of corrupted file (#13357 corrupted key signature)
      - fix #13363: Recent change to repeat bar dot
      - fix #13364: Score tabs disappear
      - fix #13375: Dragging rest ot ledger lines and undo doesn't produce stave rest
      - fix: sometimes a tuplet bracket is left when deleting a whole measure
      - fix repeat ("r") command
      - overhaul tuplet handling
26.oct (ws)
      - new feature: dragging a staff/measure up/down increases/decreases staff distance
        in a system score wide. This changes the style parameter akkoladeDistance/staffDistance
        for a single staff.
25.oct (ws)
      - fix #13334: Page Break or Spacer not visible when import from musescore 1.1
      - extend meta data dialog: score creation date, MuseScore version/revision, api level
      - new testfile stafftest.mscx
      - various fixes for staves with lines != 5
      - more easy selection of barlines: clickable area is wider than actual barline
      - fix selection of bar line in one line staff
      - fix eps+pdf save in fotomode
24.oct (ws)
      - fix fotomode
      - fix beam selection (wrong shape)
      - fix drawing of shadow notes
      - fix #7402: Split staff drops lower notes
       (la)
      - fix #13301: add score.close() to plugin framework
      - fix #5433: Staff with one line and repeat bars are not aligned
22.oct (ws)